--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,9 @@ body {
     text-align: right;
 }
 
+
+/* styling for gear.html */
+
 .gear-container {
     display: flex;
     align-items: center;
@@ -103,9 +106,106 @@ body {
     aspect-ratio: 16/9;
 }
 
-.carousel-container {
+.slider-container {
     width: 50%;
     height: auto;
     margin: 0 auto;
 }
 
+/* styling for digicam.html  */
+
+.digicam-body {
+    margin: 20px;
+    padding: 0;
+    text-align: center;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 300px;
+    grid-gap: 16px;
+    /* grid-auto-flow:dense; */
+}
+
+.gallery-item{
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.gallery-item .image{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.gallery-item .image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: 50% 50%;
+    cursor: pointer;
+    transition: .5s ease-in-out
+}
+/* 
+.gallery-item:hover .image img{
+    transform: scale(1.5);
+} */
+
+.gallery-item .text{
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    font-size: 25px;
+    pointer-events: none;
+    z-index: 4;
+    transition: .3s ease-in-out;
+    -webkit-backdrop-filter: blur(5px) saturate(1.8);
+    backdrop-filter: blur(5px) saturate(1.8);
+}
+
+/* .gallery-item:hover .text{
+    opacity: 1;
+    animation: move-down .3s linear;
+    padding: 1em;
+    width: 100%;
+    outline: 2px solid red;
+} */
+
+
+.w-2{
+    grid-column: span 2;
+}
+
+.w-3{
+    grid-column: span 3;
+}
+
+
+.h-2{
+    grid-row: span 2;
+}
+
+
+@media screen and (max-width:1024px){
+    .container{
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: 200px;
+    }
+}
+
+/* @keyframes move-down{
+    0%{
+        top: 10%;
+    }
+    50%{
+        top: 35%;
+    }
+    100%{
+        top: 50%;
+    }
+} */
