--- a/styles.css
+++ b/styles.css
@@ -116,13 +116,7 @@ body {
     margin: 0 auto;
 }
 
-/* styling for digicam.html  */
-
-.digicam-body {
-    margin: 20px;
-    padding: 0;
-    text-align: center;
-}
+/* styling for digicam gallery */
 
 .gallery-container {
     display: grid;
@@ -150,7 +144,11 @@ body {
     object-fit: cover;
     object-position: 50% 50%;
     cursor: pointer;
-    transition: .5s ease-in-out
+    transition: 0.3s;
+}
+
+.gallery-item .image img:hover {
+    opacity: 0.7;
 }
 
 
@@ -179,6 +177,73 @@ body {
     grid-row: span 4;
 }
 
+/* Modal background  */
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.9);
+}
+
+/* Modal image  */
+
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 1000px;
+}
+
+/* Modal caption  */
+
+#caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+}
+
+/* Modal animation  */
+
+.modal-content, #caption {
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+
+@keyframes zoom {
+    from {transform:scale(0)}
+    to {transform: scale(1)}
+}
+
+/* Close button */
+
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.close:hover, .close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
 
 @media screen and (max-width:1024px){
     .gallery-container{
@@ -186,6 +251,12 @@ body {
         grid-auto-rows: 200px;
     }
 }
+
+@media only screen and (max-width: 700px){
+    .modal-content {
+      width: 100%;
+    }
+  }
 
 /* styling for navbar */
 
