--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,7 @@ body {
 /* styling for digicam gallery */
 
 .gallery-container {
+    padding: 1% 1% 1% 1.3%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 300px;
@@ -151,6 +152,9 @@ body {
     opacity: 0.7;
 }
 
+.digicam-gallery h1 {
+    padding: 0 0 0 1.2%;
+}
 
 .w-2{
     grid-column: span 2;
@@ -247,8 +251,33 @@ body {
 
 @media screen and (max-width:1024px){
     .gallery-container{
+        /* padding: 16px; */
         grid-template-columns: repeat(2, 1fr);
         grid-auto-rows: 200px;
+    }
+    .w-2{
+        grid-column: span 1;
+    }
+    
+    .w-3{
+        grid-column: span 1;
+    }
+    
+    .w-4 {
+        grid-column: span 2;
+    }
+    
+    
+    .h-2{
+        grid-row: span 2;
+    }
+    
+    .h-3{
+        grid-row: span 1;
+    }
+    
+    .h-4{
+        grid-row: span 2;
     }
 }
 
