--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
-body {
+
+html, body {
     background-color: white;
 }
 
+/* instax album styling */
+
 .banner {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 100px);
     text-align: center;
     overflow: hidden;
     position: relative;
@@ -14,7 +17,7 @@ body {
     position: absolute;
     width: 200px;
     height: 300px;
-    top: 10%;
+    top: 15%;
     left: calc(50% - 100px);
     transform-style: preserve-3d;
     transform: perspective(1000px);
@@ -39,10 +42,19 @@ body {
 .banner .slider .item p {
     opacity: 0; /* Hide paragraph text by default */
     transition: opacity 0.5s ease;
+    font-size: 0.8rem;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 300;
+    font-style: italic;
 }
 
 .banner .slider .item.visible p {
     opacity: 1; /* Show text for the front-facing image */
+    text-align:center;
+    font-size: 0.8rem;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 300;
+    font-style: italic;
 }
 
 .btn {
@@ -51,12 +63,12 @@ body {
 
 #toggleLeft {
     top: 250px;
-    right: 250px;
+    right: 175px;
 }
 
 #toggleRight {
     top: 250px;
-    left: 250px;
+    left: 175px;
 }
 
 .hidden {
@@ -70,6 +82,19 @@ body {
     text-align: right;
 }
 
+@media only screen and (max-width: 590px){
+    #toggleLeft {
+        top: 250px;
+        right: 30%;
+    }
+    
+    #toggleRight {
+        top: 250px;
+        left: 30%;
+    }
+}
+
+
 
 /* styling for gear.html */
 
@@ -77,54 +102,52 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 80%;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* max-width: 80%; */
+    box-shadow: 0px 4px 7px rgba(0, 0, 0, 0.1);
+    gap: 30px;
+    margin-bottom: 50px;
+    padding-left: 0;
+}
+
+@media screen and (max-width:991px) {
+    .gear-container{
+        flex-direction: column;
+    }
 }
 
 .gear-image {
-    flex: 1;
-    margin: 20px;
-    padding: 20px;
-    
+    flex:1;
 }
 
 .gear-image img{
-    width: 100%;
     border-radius: 8px;
-    
+    width: 100%;
 }
 
 .gear-info {
-    flex: 2;
-    text-align: justify;
+    flex:2;
+    text-align: center;
+    padding: 0 20px 20px 20px;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 350;
+    
 }
 
-.slider-wrapper {
-    position: relative;
-    max-width: 768px;
-    margin: 0 auto;
-}
-
-.slider {
-    display: flex;
-    aspect-ratio: 16/9;
-}
-
-.slider-container {
-    width: 50%;
-    height: auto;
-    margin: 0 auto;
+.gear-info h2 {
+    margin-bottom: 40px;
+    font-family: "Libre Baskerville", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 /* styling for digicam gallery */
 
 .gallery-container {
-    padding: 1% 1% 1% 1.3%;
+    padding: 0px 18px 18px 18px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 300px;
     grid-gap: 16px;
-    /* grid-auto-flow:dense; */
 }
 
 .gallery-item{
@@ -153,7 +176,8 @@ body {
 }
 
 .digicam-gallery h1 {
-    padding: 0 0 0 1.2%;
+    margin: 0 0 8px 18px;
+    font-family: "Libre Baskerville", serif;
 }
 
 .w-2{
@@ -164,21 +188,9 @@ body {
     grid-column: span 3;
 }
 
-.w-4 {
-    grid-column: span 4;
-}
-
 
 .h-2{
     grid-row: span 2;
-}
-
-.h-3{
-    grid-row: span 3;
-}
-
-.h-4{
-    grid-row: span 4;
 }
 
 /* Modal background  */
@@ -260,24 +272,7 @@ body {
     }
     
     .w-3{
-        grid-column: span 1;
-    }
-    
-    .w-4 {
         grid-column: span 2;
-    }
-    
-    
-    .h-2{
-        grid-row: span 2;
-    }
-    
-    .h-3{
-        grid-row: span 1;
-    }
-    
-    .h-4{
-        grid-row: span 2;
     }
 }
 
@@ -286,6 +281,8 @@ body {
       width: 100%;
     }
   }
+
+
 
 /* styling for navbar */
 
