--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ html, body {
 
 .banner {
     width: 100%;
-    height: calc(100vh - 100px);
+    height: 100vh;
     text-align: center;
     overflow: hidden;
     position: relative;
@@ -286,6 +286,7 @@ html, body {
 
 /* styling for navbar */
 
-/* .navbar {
+.navbar {
     position: fixed;
-} */
+    z-index: 1;
+}
