--- a/styles.css
+++ b/styles.css
@@ -204,7 +204,7 @@ body {
 /* styling for digicam gallery */
 
 .gallery-container {
-    padding: 0 18px 18px 18px;
+    padding: 60px 18px 18px 18px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: 300px;
@@ -236,11 +236,6 @@ body {
     opacity: 0.7;
 }
 
-.digicam-gallery h1 {
-    margin: 0 0 8px 18px;
-    font-family: "Libre Baskerville", serif;
-    padding-top:60px;
-}
 
 .w-2{
     grid-column: span 2;
@@ -313,7 +308,7 @@ body {
 
 .close {
     position: absolute;
-    top: 15px;
+    top: 50px;
     right: 35px;
     color: #f1f1f1;
     font-size: 40px;
@@ -327,9 +322,8 @@ body {
     cursor: pointer;
 }
 
-@media screen and (max-width:1024px){
+@media screen and (max-width:990px){
     .gallery-container{
-        /* padding: 16px; */
         grid-template-columns: repeat(2, 1fr);
         grid-auto-rows: 200px;
     }
@@ -342,19 +336,51 @@ body {
     }
 }
 
+@media screen and (max-width: 500px){
+    .gallery-container{
+        grid-template-columns: 1fr;
+        grid-auto-rows: 200px;
+    }
+    .w-2{
+        grid-column: span 1;
+    }
+    .w3{
+        grid-column: span 1;
+    }
+    .h3{
+        grid-row: span 3;
+    }
+    .h2{
+        grid-row: span 2;
+    }
+    .navbar-title {
+        font-size: 16px;
+    }
+}
+
 @media only screen and (max-width: 700px){
     .modal-content {
-      width: 100%;
+      width: 90%;
     }
   }
 
 
-
 /* styling for navbar */
 
+
 .navbar {
-    position: fixed;
     width: 100%;
-    z-index: 1;
-    height: 60px;
 }
+
+/* Center the h1 element within the navbar */
+.navbar-title {
+    display: flex;
+    align-items: center;
+    font-family: "Libre Baskerville", serif;
+    font-size: 2rem;
+    margin: 0; 
+    position: absolute; 
+    left: 50%;
+    transform: translateX(-50%); 
+}
+
