--- a/styles.css
+++ b/styles.css
@@ -322,7 +322,13 @@ body {
     cursor: pointer;
 }
 
-@media screen and (max-width:990px){
+@media only screen and (max-width: 700px){
+    .modal-content {
+      width: 90%;
+    }
+  }
+
+  @media screen and (max-width:990px){
     .gallery-container{
         grid-template-columns: repeat(2, 1fr);
         grid-auto-rows: 200px;
@@ -336,7 +342,8 @@ body {
     }
 }
 
-@media screen and (max-width: 500px){
+
+  @media screen and (max-width: 540px){
     .gallery-container{
         grid-template-columns: 1fr;
         grid-auto-rows: 200px;
@@ -353,15 +360,6 @@ body {
     .h2{
         grid-row: span 2;
     }
-    .navbar-title {
-        font-size: 16px;
-    }
-}
-
-@media only screen and (max-width: 700px){
-    .modal-content {
-      width: 90%;
-    }
   }
 
 
@@ -370,17 +368,41 @@ body {
 
 .navbar {
     width: 100%;
+    padding: 2rem 0;
 }
 
 /* Center the h1 element within the navbar */
 .navbar-title {
     display: flex;
     align-items: center;
-    font-family: "Libre Baskerville", serif;
+    font-family: "Quicksand", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
     font-size: 2rem;
     margin: 0; 
     position: absolute; 
     left: 50%;
     transform: translateX(-50%); 
+    z-index: 1;
 }
+
+.navbar-nav .dropdown-menu {
+    position: absolute;
+    z-index: 5;
+}
+
+.navbar-nav a {
+    font-family: "Quicksand", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+
+@media screen and (max-width: 540px){
+    .navbar-title {
+        font-size: 1rem;
+    }
+}
+
 
