--- a/styles.css
+++ b/styles.css
@@ -300,6 +300,55 @@ body {
     font-size: 1.2rem;
 }
 
+/* styling for about page */
+
+.header-container {
+    position: relative;
+    height: 50vh;
+    overflow:hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* background: rgba(0, 0, 0, 0.6) */
+  }
+
+.header-image {
+    width: 100%;
+    height: 100%;
+    object-fit:cover;
+    object-position:center;
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: crisp-edges;
+    filter: blur(2px);
+}
+
+.header-greet, .header-title {
+    position: absolute;
+    text-align: center;
+    color: white;
+}
+
+.header-greet {
+    color: #FFFFFF;
+    font-family: "Quicksand", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+     font-size: 2em;
+ }
+
+
+.header-title {
+    margin-top: 6rem;
+    font-family: "Quicksand", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 6em;
+    letter-spacing: -0.02em;
+    color: #ffffff;
+    text-shadow: 0px 4px 0px #81b9f8;
+}
+
 /* @media queries  */
 
 @media screen and (max-width: 499.99px){
